# RAWww

./: .gitattributes  .gitignore  AGENTS.md  CONTRIBUTING.md  COPYRIGHT  LICENSE  README.md  babel.cfg  pyproject.toml  test-report.md
.github/workflows/: android.yml  build.yml
android/: README.md  android_deploy_pinned.py  main.py  pysidedeploy.spec  requirements-mobile.txt
docs/: ARCHITECTURE.md
installer/: ctrlka.iss
packaging/: prune_build.py  rawww.spec  rawww_launcher.py
scripts/: build_exiftool.py  build_nuitka.py  build_pyinstaller.py  check_macos_min_version.py  nuitka_entry.py  pyinstaller_entry.py  register_windows_integration.py  smoke_test_package.py  update_translations.py
src/rawww/: __init__.py  ai.py  ai_benchmark.py  app.py  audio.py  benchmark.py  cache.py  cache_info.py  card_import.py  color_management.py  compare_decoders.py  decode_cache.py  decode_scheduler.py  dialogs.py  error_log.py  exif.py  face_analysis.py  face_search.py  focus.py  (+36 more)
tests/: test_app_state.py  test_cache.py  test_card_import.py  test_color_management.py  test_decode_cache.py  test_decode_scheduler.py  test_error_log.py  test_exif.py  test_face_analysis.py  test_face_search.py  test_face_sets_sync.py  test_focus.py  test_i18n.py  test_launch.py  test_mobile.py  test_nima.py  test_platform_profile.py  test_process_guard.py  test_runtime_paths.py  test_shotsync.py  test_shotsync_ai_sync.py  test_single_instance.py  test_subprocess_utils.py  test_task_lifecycle.py  test_transfer_queue.py  test_updater.py  test_widgets.py  test_windows_activation.py  test_xmp.py
(+8 files in other folders)
