[project]
name = "rawww"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "kaist", email = "igor.kaist@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "insightface>=0.7.3",
    "numpy>=2.4.0",
    "onnxruntime>=1.23.0",
    "opencv-python>=4.13.0.92",
    "pillow>=12.3.0",
    "pyside6-essentials>=6.11.1",
    "rawpy>=0.27.0",
]

[project.scripts]
rawww = "rawww:main"
rawww-ai-benchmark = "rawww.ai_benchmark:main"

[build-system]
requires = ["uv_build>=0.11.21,<0.12.0"]
build-backend = "uv_build"
