[project]
name = "rawww"
dynamic = ["version"]
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "kaist", email = "igor.kaist@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "numpy>=2.4.0",
    "onnxruntime>=1.23.0",
    "pillow>=12.3.0",
    "pyobjc-framework-cocoa>=12.2.1 ; sys_platform == 'darwin'",
    "pyside6-addons>=6.11.1",
    "rawpy>=0.27.0",
    "send2trash>=2.1.0",
]

[project.scripts]
rawww = "rawww:main"
rawww-ai-benchmark = "rawww.ai_benchmark:main"

[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[tool.setuptools.dynamic]
version = { attr = "rawww.version.__version__" }

[tool.setuptools.packages.find]
where = ["src"]

[dependency-groups]
dev = [
    "pyinstaller>=6.21.0",
]
